--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="container text-center">
 		<div class="row">
-			<div class="col-sm">
+			<div class="col-md-6">
 				<h6>Order Completion Settings</h4>
 
 				<label for="nameIn">Name: </label>
@@ -27,8 +27,9 @@
 						<button class="btn btn-outline-primary" type="button" id="setOrderName">Set</button>
 					</div>
 				</div>
+				<hr>
 			</div>
-			<div class="col-sm">
+			<div class="col-md-6">
 				<h6>Manifest Completion Settings</h4>
 
 				<label for="truckNameIn">Truck List Name: </label>
@@ -61,6 +62,22 @@
 					<input type="text" name="ups" id="fedexIn" class="form-control">
 					<div class="input-group-append">
 						<button class="btn btn-outline-primary" type="button" id="setFEDEX">Set</button>
+					</div>
+				</div>
+
+				<label for="luid">LUID</label>		
+				<div class="input-group mb-3">
+					<input type="text" name="maniluid" id="luid" class="form-control">
+					<div class="input-group-append">
+						<button class="btn btn-outline-primary" type="button" id="setLuid">Set</button>
+					</div>
+
+					<div class="comment">
+						<strong>Guide to aquire your "LUID" :-</strong><br>
+						Go to any "Edit Manifest" page, and right click anywhere on that page. Click on "Inspect Elements"
+						and inside the new window go to the "Console" tab and paste the following code.
+						<pre style="background-color: rgba(0, 0, 0, 0.2);">console.log(document.querySelector("#_fid_90").value);</pre>
+						then just simply copy and paste the number (which would be something like "-63384563") inside the field above.  
 					</div>
 				</div>
 			</div>
